--- a/features.yaml
+++ b/features.yaml
@@ -3,15 +3,19 @@ current:
   - current_word.lower()  
   - current_word[-3]  
   - current_word[-2]  
+  - current_word[3]
+  - current_word[2]
   - current_word.isupper()  
   - current_word.istitle()  
   - current_word.isdigit()  
   - current_word.islower()  
+  - current_tag
 previous:  
   - previous_word.lower()  
   - previous_word.istitle()  
-  - previous_word.isupper()  
-next:
-  - next_word.lower()
-  - next_word.istitle()
-  - next_word.isupper()
+  - previous_word.isupper()
+  - previous_tag 
+# next:
+#   - next_word.lower()
+#   - next_word.istitle()
+#   - next_word.isupper()
